--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>My Webpage</title>
-    </head>
-    <body>
-        <h1>Welome to my website</h1>
-    </body>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>Les Réseaux Sociaux</title>
+    <link rel="stylesheet" href="main.css"> 
+</head>
+<body>
+    <header>
+        <h1>Histoire des Réseaux Sociaux</h1>
+        <nav>
+            <a href="index.html">Accueil</a>
+            <a href="facebook.html">Facebook</a>
+            <a href="instagram.html">Instagram</a>
+            <a href="tiktok.html">TikTok</a>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <img src="images/image_reseaux_sociaux.png" alt="Image des réseaux sociaux">
+            <h2>Bienvenue !</h2>
+            <p>Ce site explore l'histoire des réseaux sociaux...</p>
+            <ul>
+               <li> Facebook</li>
+               <li>Instagram</li>
+               <li>TikTok</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+    <p>&copy; Soufien 2024</p>
+    </footer>
+</body>
 </html>
