--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Histoire des Réseaux Sociaux</h1>
+        <h1>L'Évolution des Réseaux Sociaux</h1>
         <nav>
             <a href="index.html">Accueil</a>
             <a href="facebook.html">Facebook</a>
@@ -21,11 +21,19 @@
             <img src="images/image_reseaux_sociaux.png" alt="Image des réseaux sociaux">
             <h2>Bienvenue !</h2>
             <p>Ce site explore l'histoire des réseaux sociaux...</p>
-            <ul>
-               <li> Facebook</li>
-               <li>Instagram</li>
-               <li>TikTok</li>
-            </ul>
+            <ol>
+                <li>Meta Platforms
+                    <ul>
+                        <li>Facebook</li>
+                        <li>Instagram</li>
+                    </ul>
+                </li>
+                <li>ByteDance
+                    <ul>
+                        <li>TikTok</li>
+                    </ul>
+                </li>
+            </ol>
         </section>
     </main>
     <footer>
