--- a/instagram.html
+++ b/instagram.html
@@ -30,7 +30,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; [Ton Nom] 2024</p>
+        <p>&copy; 2024</p>
     </footer>
 </body>
 </html>
