--- a/facebook.html
+++ b/facebook.html
@@ -38,7 +38,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; Soufien 2024</p>
+        <p>&copy; 2024</p>
     </footer>
 </body>
 </html>
